--- a/hw2.Rmd
+++ b/hw2.Rmd
@@ -2,19 +2,19 @@
 title: 'Homework #2'
 output: github_document
 ---
-Due 8am EST Friday Sept 24, 2020
-Econ B2000, MA Econometrics
-Kevin R Foster, the Colin Powell School at the City College of New York, CUNY
-Fall 2020
+### Due 8am EST Friday Sept 24, 2021
+### Econ B2000, MA Econometrics
+### Kevin R Foster, the Colin Powell School at the City College of New York, CUNY
+### Fall 2021
 
 
-##Remember, there is Stats Diagnostic Test on Hawkes due by midnight Friday Sept 24.
+## Remember, there is Stats Diagnostic Test on Hawkes due by midnight Friday Sept 24.
 
 *Each student should submit a separate assignment, even if it is an identical computer file to the rest of your study group. When submitting assignments, please include your name and the assignment number as part of the filename. Please write the names of your study group members at the beginning of your homework.*
 
 
 1. What are the names of the people in your study group?
-2. Write up the results of your dice lab work. Explain each step.
+2. Write up the results of your Lab 2 work. I don't want all of your output, please pick the interesting bits (and start thinking about what makes a result interesting?).
 
 
 
